--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "In this course we will learn the basics of backend using Node.js and Express.js. This course is taught by John Smilga.",
   "main": "1-intro.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Jasminvillatoro/freecodecamp_nodejs_tut/issues"
   },
-  "homepage": "https://github.com/Jasminvillatoro/freecodecamp_nodejs_tut#readme"
+  "homepage": "https://github.com/Jasminvillatoro/freecodecamp_nodejs_tut#readme",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
